# gpu

./: .gitignore  .gitmodules  .ignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  custom-vim.lua  imgui.ini  plans.md  test-scene-2.json  test-scene.json
app/: asset_library.cpp  asset_library.hpp  cull.cpp  cull.hpp  gfx.cpp  gfx.hpp  main.cpp  material-tables.cpp  material-tables.hpp  scene_desc.cpp  scene_desc.hpp
app/shaders/: ddgi-debug-probe.frag  ddgi-trace-depth.comp  ddgi-trace-irradiance.comp  ddgi_probe_vis.frag  hiz_mip.comp  material.glsl  probe.glsl  probe_sample.glsl  pt-accumulate-pc.h  pt-accumulate.comp  resolve.comp  resolve_pc.h  scene.frag  scene.mesh  scene_shared.h  sky.glsl  standard.frag  standard.vert  triangle.frag  triangle.mesh  triangle_shared.h  util-ggx-sample.glsl  util-material-gltf.glsl  util-material-openpbr-tables.glsl  util-material-openpbr.glsl  util-material.glsl  util-mesh.glsl  util-random.glsl  util-raytrace.glsl  util-taa-filter.glsl  util-taa-reprojection.glsl  visibility.comp
app/shared/: ddgi-shared.h  ddgi_shared.h  global_pc.h  light_shared.h  shared.h
app/srat/: vkof.cpp  vkof.hpp
cmake/: FindAftermath.cmake
docs/: mor.md  renderpass.d2  vkof.md
lib/mor/: mor.cpp  mor.hpp  mor_shared.h
lib/scene/: scene.cpp  scene.hpp
lib/srat/: alloc-heap.hpp  camera.cpp  camera.hpp  core-array.hpp  core-config.hpp  core-handle.hpp  core-handle.inl  core-math.hpp  profile.hpp
lib/vkof/: aftermath.cpp  aftermath.hpp  debug_line.frag  debug_line.mesh  debug_sphere.mesh  stb_image_write.cpp  vkof.cpp  vkof.hpp
scripts/: fetch_assets.sh  screenshot_all.fish
shaders/: hiz_mip.comp  shared.glsl  standard.frag  standard.vert  visibility.comp
unit-test/: CMakeLists.txt  README.md  helpers.hpp  main.cpp  test_accel.cpp  test_buffer.cpp  test_compute.cpp  test_hot_reload.cpp  test_image.cpp  test_mor.cpp  test_pipeline.cpp  test_rendernode.cpp  test_sampler.cpp  test_scene_materials.cpp  test_transient.cpp
unit-test/shaders/: ddgi3d_probe_fill.comp  ddgi3d_probe_read.comp  fill_u32.comp  image3d_fill.comp  image3d_read.comp  image_read_r32.comp  passthrough.comp  ray_query.comp  read_material.comp  test_minimal.mesh
